--- a/e_learning/pubspec.yaml
+++ b/e_learning/pubspec.yaml
@@ -37,6 +37,15 @@ dependencies:
   cupertino_icons: ^1.0.8
   font_awesome_flutter: ^10.8.0
   flutter_bloc: ^9.1.1
+  equatable: ^2.0.7
+  google_sign_in: ^6.2.2
+  http: ^1.4.0
+  dio: ^5.8.0+1
+  get: ^4.7.2
+  get_it: ^8.0.3
+  file_picker: ^10.2.0
+  chewie: ^1.10.0
+  video_player: ^2.9.5
 
 dev_dependencies:
   flutter_test:
@@ -61,8 +70,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+assets:
+  - images/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
